[metadata]
name = glue-noaodatalab
url = https://github.com/glue-viz/glue-noaodatalab
description = Experimental NOAO DataLab plugin
long_description = file: README.rst

[options]
zip_safe = True
packages = find:
setup_requires = setuptools_scm
install_requires =
	numpy
	noaodatalab
	glue-core>=0.12

[options.entry_points]
glue.plugins =
	glue_noaodatalab = glue_noaodatalab:setup

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-faulthandler
